Changelog for Beam-Emitter

{{ $NEXT }}

    [Added]

    - Allow the event's name to be overridden when emitting the event.
      This is a rare thing to want, but it makes some future cookbook
      items (like a catch-all '*' event) more useful.

1.003     2016-11-11 21:35:53-06:00 America/Chicago

    [Fixed]

    - Fix the unsubscribe callback (returned from the `subscribe`
      method) throwing an exception if the emitter object has already
      been destroyed. Since the unsubscribe callback has a weak
      reference to the emitter object, we have to make sure the
      reference still exists before using it to unsubscribe. Thanks
      @djerius! (Github #14)

    - Fix unsubscribing from an event during an event not firing all the
      rest of the events properly. When using the unsubscribe callback
      to create a one-time event handler, the emitter could miss the
      next event listener (since we were looping over the listeners
      array and modifying it in the loop). Now we loop over a copy of
      the listeners array so that the original can be modified to remove
      the listener we want. Thanks @djerius! (Github #15)

1.002     2016-09-02 18:58:23-05:00 America/Chicago

 - Update distribution settings

1.001 2016-07-19T16:51:49
 - use a better meta-syntactic variable
 - fix circular references in unsubscribe callback
 - return subref that removes the current subscriber
 - upgrade perl in travis config
 - remove ModuleBuild to prevent toolchain confusion

1.000 2015-05-08T04:34:31Z
 - fix typo in documentation
 - remove private attribute from public documentation

0.009 2015-05-08T04:34:01Z
 - fix typo in documentation
 - remove private attribute from public documentation

0.008 2015-03-02T02:33:00Z
 - add note about loading custom event classes
 - add dzil plugin for prereqs and compile tests
 - remove root dotfiles and root ini files from dist
 - switch to dzil Git::GatherDir
 - fix contributors dependency

0.007 2015-01-04T14:30:47Z