@@ -8,6 +8,11 @@ Changelog for Beam-Emitter
       This is a rare thing to want, but it makes some future cookbook
       items (like a catch-all '*' event) more useful.
 
+    - Added a Cookbook document (Beam::Emitter::Cookbook) to start
+      demonstrating some useful patterns that aren't quite useful or
+      generally-desired enough to be part of the main distribution
+      always. Thanks @yanick for the help! (Github #12)
+
 1.003     2016-11-11 21:35:53-06:00 America/Chicago
 
     [Fixed]
